removed virtualenv, duplicate lines in Dockerfile

--- a/pyff_batch/Dockerfile
+++ b/pyff_batch/Dockerfile
@@ -3,14 +3,20 @@ FROM ubuntu:14.04
 MAINTAINER rhoerbe <r2h2@hoerbe.at>
 
 RUN apt-get update
-RUN apt-get install -y git-core libyaml-dev python-dev build-essential libxml2-dev libxslt-dev libz-dev python-virtualenv
-RUN virtualenv /usr/pyff
-ADD invenv.sh /invenv.sh
-RUN chmod a+x /invenv.sh
-RUN env VENV=/usr/pyff /invenv.sh pip install pykcs11
-RUN env VENV=/usr/pyff /invenv.sh pip install --upgrade git+git://github.com/leifj/pyFF.git#egg=pyFF
+RUN apt-get install -y git-core libyaml-dev python-dev build-essential libxml2-dev libxslt-dev libz-dev
+
+# do with virtualenv
+#RUN apt-get install python-virtualenv
+#RUN virtualenv /usr/pyff
+#ADD invenv.sh /invenv.sh
+#RUN chmod a+x /invenv.sh
+#RUN env VENV=/usr/pyff /invenv.sh pip install pykcs11
+#RUN env VENV=/usr/pyff /invenv.sh pip install --upgrade git+git://github.com/leifj/pyFF.git#egg=pyFF
+
+#do without virtualenv
+RUN pip install pykcs11
+RUN pip install --upgrade git+git://github.com/leifj/pyFF.git#egg=pyFF
 ADD config_cron.sh /config_cron.sh
-ADD start.sh /start.sh
 ADD start.sh /start.sh
 RUN chmod a+x /start.sh
 
