build rules for ra21 branch

--- a/Dockerfile.ra21
+++ b/Dockerfile.ra21
@@ -15,7 +15,7 @@ RUN chmod a+x /invenv.sh
 ADD install-pykcs11.sh /install-pykcs11.sh
 RUN chmod a+x /install-pykcs11.sh
 RUN env VENV=/usr/pyff /invenv.sh easy_install --upgrade git+git://github.com/leifj/pyXMLSecurity.git#egg=pyXMLSecurity
-RUN env VENV=/usr/pyff /invenv.sh easy_install --upgrade git+git://github.com/leifj/pyFF.git#egg=pyFF
+RUN env VENV=/usr/pyff /invenv.sh easy_install --upgrade git+git://github.com/leifj/pyFF.git@ra21#egg=pyFF
 RUN env VENV=/usr/pyff /invenv.sh /install-pykcs11.sh
 EXPOSE 8080
 ADD localconfig.py /usr/pyff/lib/python2.7/localconfig.py
