fixed docker build and jenkins setup

--- a/.jenkins.yaml
+++ b/.jenkins.yaml
@@ -1,2 +1,11 @@
 triggers:
     cron: @daily
+builders:
+    - script
+script:
+    - make
+    - make eidas
+    - make dev
+upstream:
+    - pyFF
+    - pyXMLSecurity
