--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
 version: "3"
 services:
    mdq-browser:
-      image: docker.sunet.se/mdq-browser:${MDQ_BROWSER_VERSION:-latest}
+      image: docker.sunet.se/mdq-browser:${MDQ_BROWSER_VERSION:-1.0.1}
       container_name: mdq_browser
       ports:
-         - "80:80"
+         - "8080:80"
       environment:
          - MDQ_HOST=pyff
-         - MDQ_PORT=80
+         - MDQ_PORT=8080
+         - HOSTPORT=localhost:8080
          - PYFF_APIS=true
+      networks:
+         docker:
+      depends_on:
+         - pyff
    pyff:
       build: .
-      image: docker.sunet.se/pyff:${PYFF_VERSION:-api}
-      container_name: pyff-api
+      image: docker.sunet.se/pyff:${PYFF_VERSION:-2.0.0}
+      container_name: pyff
+      environment:
+         - LOGLEVEL=DEBUG
+      networks:
+         docker:
+networks:
+  docker:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.name: br-docker
+    ipam:
+      driver: default
+      config:
+      - subnet: 172.20.10.0/24
