--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -10,7 +10,7 @@ RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
-RUN python3 -m venv ${VENV} && . ${VENV}/bin/activate && python3 -m pip install ${PACKAGE} && python3 -m pip pip3 install --upgrade pipdeptree pykcs11 ${EXTRA_PACKAGES} && pipdeptree
+RUN python3 -m venv ${VENV} && . ${VENV}/bin/activate && python3 -m pip install ${PACKAGE} && python3 -m pip install --upgrade pipdeptree pykcs11 ${EXTRA_PACKAGES} && pipdeptree
 EXPOSE 8080
 ADD ${ENTRYPOINT}.sh /${ENTRYPOINT}.sh
 ADD debug.ini /debug.ini
